log
Wed 20 Mar 2024 04:43:49 PM UTC: 
 tests:  0|5
total_score: 0/70
83811b2
Wed 20 Mar 2024 04:46:37 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
cd75b08
Wed 20 Mar 2024 04:50:25 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
6d7bf79
Wed 20 Mar 2024 04:50:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
8bda400
Wed 20 Mar 2024 04:52:35 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:11: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   88 |       if ((int)elemento == elem)
      |           ^
cc1: all warnings being treated as errors
Compilation failed
e35bbcb
